added animation on logo

--- a/assets/globals.sass
+++ b/assets/globals.sass
@@ -16,3 +16,9 @@ $yellow: #FFCF43
         transform: rotate(-1deg)
     to
         transform: rotate(1deg)
+
+@keyframes dimming_shadow
+    from
+        box-shadow: 0 0 20px rgba(92, 224, 216, 0.8)
+    to
+        box-shadow: 0 0 30px rgba(92, 224, 216, 0.8)
